tdf#127422 draw text with correct pKernArray values.

Prior to 5f62b97ae7891b8c601f6093a1ec5358feb20790,

Starting position was specified and DrawText was used to render
the text without referring to pKernArray. After the patch,
DrawTextArray was used but pKernArray was not update correctly.

Instead of draw each substring seprated by space, this patch
increases the values pKernArray when a space is encountered
and call DrawTextArray only once.

Change-Id: I9e61b2d0608400f26136490248740c5f00b56cc3
Reviewed-on: https://gerrit.libreoffice.org/79544
Tested-by: Jenkins
Reviewed-by: Mark Hung <marklh9@gmail.com>
(cherry picked from commit d744838991594eebe27acc4c7d9fb4579d654853)
Reviewed-on: https://gerrit.libreoffice.org/80221